force-app/main/default/objects/InsurancePolicyParticipant/fields/BrokerageAmt__c.field-meta.xml
<CustomField>
    <fullName>BrokerageAmt__c</fullName>
    <label>Brokerage Amt.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>