force-app/main/default/objects/InsurancePolicyParticipant/fields/BrokerageAmtKRW__c.field-meta.xml
<CustomField>
    <fullName>BrokerageAmtKRW__c</fullName>
    <formula>BrokerageAmt__c  *  ExchangeRate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brokerage Amt.(KRW)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>