force-app/main/default/objects/InsurancePolicyParticipant/fields/BrokerageRate__c.field-meta.xml
<CustomField>
    <fullName>BrokerageRate__c</fullName>
    <label>Brokerage Rate(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>