force-app/main/default/objects/InsurancePolicyParticipant/fields/EGIBusinessRegistrationNo_fm__c.field-meta.xml
<CustomField>
    <fullName>EGIBusinessRegistrationNo_fm__c</fullName>
    <formula>EGIClientname_lk__r.BizTaxNo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Registration No.</label>
    <type>Text</type>
</CustomField>