force-app/main/default/objects/InsurancePolicyParticipant/fields/EGIClientname_lk__c.field-meta.xml
<CustomField>
    <fullName>EGIClientname_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isGeneralAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policy Participants (Client Name)</relationshipLabel>
    <relationshipName>InsurancePolicyParticipantsbyClient</relationshipName>
    <type>Lookup</type>
</CustomField>