force-app/main/default/objects/InsurancePolicyParticipant/fields/EGIExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>EGIExpirationDate__c</fullName>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>