force-app/main/default/objects/InsurancePolicyParticipant/fields/EGIInceptionDate__c.field-meta.xml
<CustomField>
    <fullName>EGIInceptionDate__c</fullName>
    <label>Inception Date</label>
    <type>DateTime</type>
</CustomField>