force-app/main/default/objects/InsurancePolicyParticipant/fields/EGIPeriodMonth__c.field-meta.xml
<CustomField>
    <fullName>EGIPeriodMonth__c</fullName>
    <label>Period(Month)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>