force-app/main/default/objects/InsurancePolicyParticipant/fields/Insurer__c.field-meta.xml
<CustomField>
    <fullName>Insurer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>보험사(간사사/참여사)</description>
    <label>Insurer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isInsurerAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policy Participants</relationshipLabel>
    <relationshipName>InsurancePolicyParticipants_Insurer</relationshipName>
    <type>Lookup</type>
</CustomField>