force-app/main/default/objects/InsurancePolicyParticipant/fields/InsurerAcronymOCR__c.field-meta.xml
<CustomField>
    <fullName>InsurerAcronymOCR__c</fullName>
    <label>Insurer Acronym(OCR)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>