force-app/main/default/objects/InsurancePolicyParticipant/fields/InsurerCommission__c.field-meta.xml
<CustomField>
    <fullName>InsurerCommission__c</fullName>
    <label>Insurer Commission(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>