force-app/main/default/objects/InsurancePolicyParticipant/fields/InsurerPolicyNo__c.field-meta.xml
<CustomField>
    <fullName>InsurerPolicyNo__c</fullName>
    <label>Insurer Policy No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>