force-app/main/default/objects/InsurancePolicyParticipant/fields/isCoBroker__c.field-meta.xml
<CustomField>
    <fullName>isCoBroker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Co-Broker</label>
    <type>Checkbox</type>
</CustomField>