force-app/main/default/objects/InsurancePolicyParticipant/fields/LeadInsurer__c.field-meta.xml
<CustomField>
    <fullName>LeadInsurer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Insurer</label>
    <type>Checkbox</type>
</CustomField>