force-app/main/default/objects/InsurancePolicyParticipant/fields/PolicyLineitemCreated_fm__c.field-meta.xml
<CustomField>
    <fullName>PolicyLineitemCreated_fm__c</fullName>
    <formula>InsurancePolicy.PolicyLineItemCreated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PolicyLineitemCreated</label>
    <type>Checkbox</type>
</CustomField>