force-app/main/default/objects/InsurancePolicyParticipant/fields/RelatedParticipant_lk__c.field-meta.xml
<CustomField>
    <fullName>RelatedParticipant_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Participant</label>
    <referenceTo>InsurancePolicyParticipant</referenceTo>
    <relationshipLabel>Insurance Policy Participants</relationshipLabel>
    <relationshipName>InsurancePolicyParticipantsbyParticipant</relationshipName>
    <type>Lookup</type>
</CustomField>