force-app/main/default/objects/InsurancePolicyParticipant/fields/SignedLine__c.field-meta.xml
<CustomField>
    <fullName>SignedLine__c</fullName>
    <label>Signed Line(%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>