force-app/main/default/objects/InsurancePolicyParticipant/fields/TBD__c.field-meta.xml
<CustomField>
    <fullName>TBD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-Broker</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.isBrokerAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Insurance Policy Participants (TBD)</relationshipLabel>
    <relationshipName>InsurancePolicyParticipants_TBD</relationshipName>
    <type>Lookup</type>
</CustomField>